--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ travis-ci = { repository = "AlexanderThaller/salt-compressor", branch = "master"
 
 [dependencies]
 colored = "1"
-log = "0.3"
-loggerv = "0.3"
-regex = "0.2"
+log = "0.4"
+loggerv = "0.7"
+regex = "1"
 serde_json = "1"
-time = "0.1"
+chrono = "0.4"
 
 [dependencies.clap]
 version = "2"
